fix top margin on tablet above

--- a/assets/scss/layout/grid.scss
+++ b/assets/scss/layout/grid.scss
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 74rem;
+  @media screen and (min-width: 30rem) {
+    margin: 3rem auto;
+  }
   margin: auto;
   padding: 0 1rem;
   row-gap: 2rem;
